# dbt-fusion

./: .changie.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
crates/dbt-adapter-sql/: Cargo.toml  deny.toml
crates/dbt-adapter-sql/src/: ident.rs  keywords.rs  lib.rs  statements.rs  tokenizer.rs
crates/dbt-adapter-sql/src/types/: mod.rs  tests.rs
crates/dbt-base/: Cargo.toml
crates/dbt-base/src/: cancel.rs  hasher.rs  lib.rs
crates/dbt-chaos/: Cargo.toml
crates/dbt-chaos/src/: circuit_breaker.rs  controller.rs  fault.rs  lib.rs  metrics.rs  test_harness.rs
crates/dbt-chaos/src/config/: builder.rs  mod.rs  predefined.rs  profile.rs
crates/dbt-chaos/src/proxy/: engine_proxy.rs  mod.rs  sidecar_proxy.rs
crates/dbt-clap-core/: Cargo.toml
crates/dbt-clap-core/src/: commands.rs  lib.rs  time_machine.rs  tracing.rs
crates/dbt-cli-lib/: Cargo.toml
crates/dbt-cli-lib/src/: ctrl_c.rs  lib.rs
crates/dbt-cloud-config/: Cargo.toml
crates/dbt-cloud-config/src/: lib.rs  resolve.rs
crates/dbt-compilation/: Cargo.toml
crates/dbt-compilation/src/: core.rs  lib.rs
crates/dbt-csv/: Cargo.toml  README.md
crates/dbt-csv/src/: lib.rs  type_tester.rs
crates/dbt-csv/src/reader/: mod.rs  records.rs
crates/dbt-csv/test/data/: empty_header.csv  empty_header_cr.csv  empty_header_crlf.csv  text_columns_test.csv
crates/dbt-deps/: Cargo.toml
crates/dbt-deps/src/: add_package.rs  context.rs  github_client.rs  hub_client.rs  mod.rs  network_client.rs  package_listing.rs  private_package.rs  tarball.rs  tarball_client.rs  types.rs  utils.rs
crates/dbt-deps/src/git_client/: auth.rs  cache.rs  generic.rs  github.rs  mod.rs  traits.rs
crates/dbt-deps/src/steps/: compute_package_lock.rs  install_packages.rs  load_package_lock.rs
crates/dbt-df-providers/: Cargo.toml
crates/dbt-df-providers/src/: arrow_sendable.rs  catalog_list.rs  context.rs  dbt_csv_mem_table.rs  delayed_table.rs  in_memory_providers.rs  lib.rs  listing_table.rs  seed_io.rs
crates/dbt-df-providers/tests/data/: repro_multiline_seed.csv
crates/dbt-docs-server/: Cargo.toml  build.rs
crates/dbt-docs-server/src/: embed.rs  lib.rs  server.rs  state.rs
crates/dbt-docs-server/src/handlers/: capabilities.rs  column_lineage.rs  health.rs  json.rs  lineage.rs  mod.rs  models.rs  models_tests.rs  nodes.rs  project.rs  query.rs  sql.rs
crates/dbt-docs-server/src/providers/: mod.rs
crates/dbt-docs-server/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
crates/dbt-docs-server/web/placeholder/: index.html
crates/dbt-docs-server/web/src/: App.tsx  api.ts  app.css  main.tsx
crates/dbt-handles/: Cargo.toml
crates/dbt-handles/src/: lib.rs
crates/dbt-index-core/: Cargo.toml
crates/dbt-index-core/src/: backend.rs  column_impact.rs  column_lineage.rs  lib.rs  provider.rs
crates/dbt-jinja-ctx/: Cargo.toml
crates/dbt-jinja-ctx/src/: compile.rs  core.rs  jinja_object.rs  lib.rs  load.rs  register.rs  resolve.rs  run.rs
crates/dbt-jinja-ctx/src/objects/: compile.rs  lookup.rs  mod.rs  parse.rs  run.rs
crates/dbt-jinja-ctx/tests/: compile_base.rs  compile_node.rs  jinja_ctx_slt.rs  load_ctx.rs  resolve_base.rs  resolve_core.rs  resolve_model.rs  run_node.rs
crates/dbt-jinja-ctx/tests/common/: jinja_ctx_slt.rs
crates/dbt-jinja-ctx/tests/snapshots/: compile_base__compile_base_ctx_schema.snap  compile_node__compile_node_ctx_schema.snap  load_ctx__load_ctx_schema.snap  resolve_base__resolve_base_ctx_schema.snap  resolve_core__resolve_core_schema.snap  resolve_model__resolve_model_ctx_schema.snap  run_node__run_node_ctx_schema.snap
crates/dbt-jinja-filters/: Cargo.toml
crates/dbt-jinja-filters/src/: lib.rs
crates/dbt-jinja-vars/: Cargo.toml
crates/dbt-jinja-vars/src/: configured_var.rs  dbt_vars.rs  env_var.rs  lib.rs  var.rs
crates/dbt-metadata/: Cargo.toml
crates/dbt-metadata-parquet/: Cargo.toml
crates/dbt-metadata-parquet/src/: cll_epoch.rs  compile_columns.rs  compiled_node.rs  epoch_io.rs  invocations.rs  lib.rs  parquet_cll_epoch.rs  parquet_compile_columns.rs  parquet_compiled_node.rs  parquet_invocations.rs  parquet_parse_alive.rs  parquet_runtime_freshness.rs  parquet_runtime_results.rs  parse_alive.rs  runtime_freshness.rs  runtime_results.rs  utils.rs
crates/dbt-metadata/benches/: partial_parse_bench.sh
crates/dbt-metadata/src/: build_cache.rs  file_registry.rs  hashing.rs  incremental_parse.rs  index_resolution.rs  lib.rs  node_state_writer.rs  package_deps.rs  parquet_cas.rs  parquet_column.rs  parquet_incremental.rs  parquet_node.rs  parquet_node_serde.rs  parquet_project.rs  parse_cache.rs  parse_state.rs  partial_parse.rs  types.rs
crates/dbt-metricflow/: Cargo.toml
crates/dbt-metricflow/docs/: authoring-metrics.md  metric-semantics.md
crates/dbt-metricflow/src/: lib.rs
crates/dbt-metricflow/tests/: bigquery_compat.rs  cli_smoke.rs  databricks_compat.rs  docs_examples.rs  metricflow_compat.rs  redshift_compat.rs  snowflake_compat.rs
crates/dbt-parser-redshift/: Cargo.toml
crates/dbt-parser-redshift/src/: Redshift.g4  lib.rs
crates/dbt-pretty-table/: Cargo.toml  deny.toml
crates/dbt-pretty-table/src/: lib.rs
crates/dbt-profile/: Cargo.toml
crates/dbt-profile/src/: error.rs  jinja.rs  lib.rs  resolve.rs
crates/dbt-profile/tests/: resolve_test.rs
crates/dbt-scheduler/: Cargo.toml
crates/dbt-scheduler/src/: args.rs  instructions.rs  mod.rs  node_selector.rs  schedule.rs
crates/dbt-sql/dbt-parser-bigquery/: Cargo.toml
crates/dbt-tasks-core/: Cargo.toml
crates/dbt-tasks-core/src/: context.rs  lib.rs  precompile.rs  pretty_table.rs  run_tasks_args.rs  span_manager.rs  stats_to_results.rs  task.rs  test_aggregation.rs  visitor.rs
crates/dbt-tasks-sa/: Cargo.toml
crates/dbt-tasks-sa/src/: lib.rs  register_seeds.rs
crates/proto-rust/: Cargo.toml
crates/proto-rust/src/: lib.rs
crates/proto-rust/src/impls/: mod.rs  (+3 more)
crates/xdbc-record-replay/: Cargo.toml
crates/xdbc-record-replay/src/: error.rs  lib.rs  naming.rs  record.rs  replay.rs
(+1690 files in other folders)
