[package]
name = "dbt-adapter-sql"
description = "SQL types, identifiers, keywords, and tokenizer for dbt adapters"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arrow-schema = { workspace = true }
dbt-adapter-core = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-sql-keywords = { workspace = true }
