[package]
name = "dbt-clap-core"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
console = { workspace = true }
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-serde_yaml = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
uuid = { workspace = true }

[lib]
name = "dbt_clap_core"
doctest = false
