[package]
name = "dbt-compilation"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-adapter = { workspace = true }
dbt-common = { workspace = true }
dbt-error = { workspace = true }
dbt-features = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-loader = { workspace = true }
dbt-metadata = { workspace = true }
dbt-parser = { workspace = true }
dbt-schemas = { workspace = true }
tracing = { workspace = true }

[lib]
name = "dbt_compilation"
path = "src/lib.rs"
doctest = false
