[package]
name = "dbt-deps"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true }
async-trait = { workspace = true }
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-jinja-utils = { workspace = true }
dbt-schemas = { workspace = true }
dbt-telemetry = { workspace = true }
dbt-yaml = { workspace = true }
futures = { workspace = true }
percent-encoding = "2.3.1"
regex = { workspace = true }
reqwest = { workspace = true, features = ['json', 'stream'] }
reqwest-middleware = { workspace = true, features = ['json'] }
reqwest-retry = { workspace = true }
scc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { version = "0.10.6" }
tempfile = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
vortex-events = { workspace = true }

[dev-dependencies]
dbt-telemetry = { workspace = true }
tokio = { workspace = true }

[lib]
name = "fs_deps"
path = "src/mod.rs"
doctest = false
