[package]
name = "dbt-jinja-filters"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
name = "dbt_jinja_filters"
path = "src/lib.rs"
doctest = false

[lints]
workspace = true

[dependencies]
minijinja = { workspace = true }

dbt-fusion-workspace-hack = { version = "0.1" }

[dev-dependencies]
