[package]
name = "dbt-metadata-parquet"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-telemetry = { workspace = true }
dbt-yaml = { workspace = true }

arrow = { workspace = true }
parquet = { workspace = true }
pathdiff = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_arrow = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "dbt_metadata_parquet"
path = "src/lib.rs"
doctest = false
