[package]
name = "dbt-tasks-core"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-pretty-table = { workspace = true }
dbt-schemas = { workspace = true }
dbt-yaml = { workspace = true }
