[package]
name = "proto-rust"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
pbjson = { workspace = true }
pbjson-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_repr = { workspace = true }
serde_with = { workspace = true }
tracing = { workspace = true }

[lib]
name = "proto_rust"
path = "src/lib.rs"
