[package]
name = "proto-rust"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
pbjson-types = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }

[lib]
name = "proto_rust"
path = "src/lib.rs"
