[package]
name = "xdbc-record-replay"
description = "Record and replay implementations of xdbc Connection/Statement traits for testing"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
adbc-core = { workspace = true }
arrow = { workspace = true }
arrow-array = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }
base64 = { workspace = true }
dashmap = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-xdbc = { workspace = true }
once_cell = { workspace = true }
parquet = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
