[package]
authors.workspace = true
description = "Generated Antlr parser for the BigQuery dialect"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "dbt-parser-bigquery"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
antlr-rust = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }

[lib]
doctest = false
